--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Shames Kholani</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,300;1,400;1,600&display=swap" rel="stylesheet">
+    <script data-ad-client="ca-pub-9379062058664047" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <div class="container">
